<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_config"
        android:textAllCaps="true"
        android:textColor="@color/background_component"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginTop="32dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitleRounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_rounds"
                android:textAllCaps="true"
                android:textColor="@color/background_app"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNumRounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/background_app"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:foreground="@drawable/ic_add"
                    android:foregroundTint="@color/background_component"
                    app:backgroundTint="@color/background_app" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/subtractRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="@drawable/ic_subtract"
                    android:foregroundTint="@color/background_component"
                    app:backgroundTint="@color/background_app" />

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/app_time_rounds"
                android:textAllCaps="true"
                android:textColor="@color/background_app"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cvMinutesRound"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    app:cardBackgroundColor="@color/background_app"
                    app:cardCornerRadius="16dp">

                    <TextView
                        android:id="@+id/tvMinutesRound"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:textColor="@color/background_component"
                        android:textSize="35sp"
                        android:textStyle="bold"
                        tools:text="03" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points"
                    android:textColor="@color/background_app"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvSecondsRounds"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    app:cardBackgroundColor="@color/background_app"
                    app:cardCornerRadius="16dp">

                    <TextView
                        android:id="@+id/tvSecondsRound"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:textColor="@color/background_component"
                        android:textSize="35sp"
                        android:textStyle="bold"
                        tools:text="00" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/app_time_rest"
                android:textAllCaps="true"
                android:textColor="@color/background_app"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cvMinutesRest"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    app:cardBackgroundColor="@color/background_app"
                    app:cardCornerRadius="16dp">

                    <TextView
                        android:id="@+id/tvMinutesRest"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:textColor="@color/background_component"
                        android:textSize="35sp"
                        android:textStyle="bold"
                        tools:text="03" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points"
                    android:textColor="@color/background_app"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvSecondsRest"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    app:cardBackgroundColor="@color/background_app"
                    app:cardCornerRadius="16dp">

                    <TextView
                        android:id="@+id/tvSecondsRest"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:textColor="@color/background_component"
                        android:textSize="35sp"
                        android:textStyle="bold"
                        tools:text="00" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSettingRound"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settings_round"
                android:textAllCaps="true"
                android:textColor="@color/background_app"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSettingRest"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settings_rest"
                android:textAllCaps="true"
                android:textColor="@color/background_app"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <View
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/background_component" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnReset"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="16dp"
            android:foreground="@drawable/ic_restart"
            app:backgroundTint="@color/reset_color"
            android:foregroundTint="@color/background_app"
            />

        <View
            android:layout_width="75dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/background_component"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnStart"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="16dp"
            android:foreground="@drawable/ic_play"
            app:backgroundTint="@color/start_color"
            android:foregroundTint="@color/background_app" />

        <View
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/background_component" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

